Init to pre create task container for load balancer scheduler tasks in FlexibleTenancyLoadBalancer.