@@ -1,13 +1,11 @@
 package com.webank.wedatasphere.exchangis.job.server.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Cipher;
 import java.io.IOException;
 import java.security.*;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 /**
  * @author tikazhang
@@ -72,13 +70,11 @@ public class RSAUtil {
 
     //字节数组转Base64编码
     public static String byte2Base64(byte[] bytes){
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(bytes);
+        return Base64.getEncoder().encodeToString(bytes);
     }
 
     //Base64编码转字节数组
     public static byte[] base642Byte(String base64Key) throws IOException {
-        BASE64Decoder decoder = new BASE64Decoder();
-        return decoder.decodeBuffer(base64Key);
+        return Base64.getDecoder().decode(base64Key);
     }
 }
